// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get Competitor - Error 1`] = `
<div>
  <vue-headful-stub
    description="Competitor Results on Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - undefined - Competitor"
    url="https://munro-leagues.herokuapp.com/competitors/undefined"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`Renders Correctly 1`] = `
<div
  competitor="[object Object]"
>
  <vue-headful-stub
    description="Competitor Results on Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - undefined - Competitor"
    url="https://munro-leagues.herokuapp.com/competitors/"
  />
   
  <!---->
   
  <!---->
</div>
`;
